--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Brian A. Reed"
   avatar           : "profile.png"
-  bio              : "PhD Candidate, Climate ML & Econometrics"
+  bio              : "PhD Candidate, Stanford University"
   location         : "Stanford, California"
   employer         :
   pubmed           : 
