--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,14 +1,8 @@
 # main links links
 main:
-  - title: "Publications"
+  - title: "Research"
     url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
-    
+   
   - title: "CV"
     url: /cv/
 
