--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,7 @@ atom_feed:
   path                   : # blank (default) uses feed.xml
 
 # SEO Related
+google_analytics         : G-RNN7LCVDRR
 google_site_verification : G-RNN7LCVDRR
 bing_site_verification   :
 alexa_site_verification  :
@@ -75,7 +76,7 @@ social:
 analytics:
   provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          :
+    tracking_id          : G-RNN7LCVDRR
 
 
 # Site Author
