--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ social:
 
 # Analytics
 analytics:
-  provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
+  provider               :  "custom" # "google-universal"  false (default), "google", "google-universal", "custom" - https://github.com/academicpages/academicpages.github.io/issues/265
   google:
     tracking_id          : G-RNN7LCVDRR
 
