--- a/_config.yml
+++ b/_config.yml
@@ -50,8 +50,8 @@ atom_feed:
   path                   : # blank (default) uses feed.xml
 
 # SEO Related
-google_analytics         : G-RNN7LCVDRR
-google_site_verification : G-RNN7LCVDRR
+google_analytics         : "G-RNN7LCVDRR"
+google_site_verification : "G-RNN7LCVDRR"
 bing_site_verification   :
 alexa_site_verification  :
 yandex_site_verification :
